--- a/style.css
+++ b/style.css
@@ -36,3 +36,107 @@ a:hover {
 ul {
     padding: 12px;
 }
+
+.container {
+    width: 90%;
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+#header {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+#header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0; 
+}
+
+#header .container .brand {
+    flex-basis: 50%;
+    flex-grow: 0;
+}
+
+#header .hamburger.active {
+    color: var(--purple);
+}
+
+#header .nav-list ul {
+    list-style: none;
+    display: block;
+    visibility: hidden;
+    opacity: 0;
+    border-radius: 4px;
+    position: absolute;
+    left: 5%;
+    right: 5%;
+    background-color: var(--purple);
+    transition: visibility 0s, opacity 0.3s ease-in-out;
+}
+
+#header .nav-list ul.active {
+    visibility: visible;
+    opacity: 1;
+}
+
+#header .nav-list ul li {
+    padding: 10px 12px;
+}
+
+#header .nav-list ul li a {
+    font-family: "Poppins", sans-serif;
+    font-size: medium;
+    color: var(--blue-violet);
+}
+
+#header .brand img {
+    width: 100px;
+    /* visibility: hidden; */
+}
+
+#header .hamburger {
+    color: var(--beige)
+}
+
+#header .hamburger:focus {
+    color: var(--yellow)
+}
+
+/* -------------------------------------------------------------------------------- */
+/*	DESKTOP
+/* -------------------------------------------------------------------------------- */
+
+@media( min-width: 769px ) {
+    #header .container {
+        padding: 40px 0; 
+    }
+
+    #header .brand img {
+        width: 150px;
+    }
+
+    #header .hamburger {
+		display: none;
+	}
+
+    #header .nav-list ul {
+        list-style: none;
+        display: flex;
+        column-gap: 24px;
+        visibility: visible;
+        opacity: 1;
+        position: static;
+        background-color: unset;
+    }
+
+    #header .nav-list ul li a {
+        font-size: larger;
+        color: var(--purple);
+    }
+}
