--- a/style.css
+++ b/style.css
@@ -22,6 +22,26 @@ h1, h2, h3, h4, h5 h6 {
     font-family: "Poppins", sans-serif;
     font-weight: 700;
     font-style: normal;
+    color: var(--purple);
+}
+
+h1 {
+    font-size: 32px;
+}
+h2 {
+    font-size: 24px;
+}
+h3 {
+    font-size: 19px;
+}
+h4 {
+    font-size: 16px;
+}
+h5 {
+    font-size: 14px;
+}
+h6 {
+    font-size: 13px;
 }
 
 a {
