--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     font-weight: 400;
     font-style: normal;
     cursor: url('images/coffee.png'), auto;
+    color: var(--beige);
 }
 
 h1, h2, h3, h4, h5 h6 {
@@ -60,7 +61,14 @@ ul {
 .container {
     width: 90%;
     max-width: 1440px;
+    min-height: 100vh;
     margin: 0 auto;
+    min-height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 .text-white {
     color: var(--white);
 }
@@ -77,22 +85,28 @@ ul {
     color: var(--yellow);
 }
 
+/* -------------------------------------------------------------------------------- */
+/*	HEADER
+/* -------------------------------------------------------------------------------- */
 #header {
     position: fixed;
     z-index: 1000;
     top: 0;
     left: 0;
     width: 100%;
+    background-color: rgba(28, 2, 33, 0.24);
+	transition: 0.3s ease background-color;
 }
 
-#header .container {
+#header .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 0; 
+    min-height: unset;
 }
 
-#header .container .brand {
+#header .header .brand {
     flex-basis: 50%;
     flex-grow: 0;
 }
@@ -143,16 +157,76 @@ ul {
 }
 
 /* -------------------------------------------------------------------------------- */
+/*	HERO
+/* -------------------------------------------------------------------------------- */
+
+#hero {
+    background-image: url(images/hero-banner.png);
+    background-size: cover;
+	background-position: top center;
+	position: relative;
+	z-index: 1;
+}
+
+#hero::after {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	background-color: var(--blue-violet);
+	opacity: 0.6;
+	z-index: -1;
+}
+
+#hero .hero {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 50px;
+    justify-content: flex-start;
+}
+
+#hero h1 {
+    font-size: 7em;
+    font-weight: 400;
+    margin: auto;
+    line-height: 100%;
+}
+
+/* -------------------------------------------------------------------------------- */
+/* ANIMATIONS 
+/* -------------------------------------------------------------------------------- */
+.typewriter {
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    letter-spacing: .15em; /* Adjust as needed */
+    width: fit-content;
+    animation: 
+        typing 3.5s steps(40, end),
+        blink-caret .75s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+    from { width: 0 }
+    to { width: 75% }
+  }
+  
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: var(--yellow); }
+}
+
+/* -------------------------------------------------------------------------------- */
 /*	DESKTOP
 /* -------------------------------------------------------------------------------- */
 
 @media( min-width: 769px ) {
-    #header .container {
-        padding: 40px 0; 
-    }
-
     #header .brand img {
-        width: 150px;
+        width: 100px;
     }
 
     #header .hamburger {
